--- a/src/pages/TechnologyList.css
+++ b/src/pages/TechnologyList.css
@@ -57,3 +57,33 @@
     margin-top: 30px;
     color: var(--text-secondary);
 }
+
+/* Секция поиска */
+.search-input-container {
+    margin-bottom: 25px;
+}
+
+.search-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.search-input {
+    width: 100%;
+    /* Увеличен отступ слева, чтобы вместить иконку */
+    padding: 12px 15px 12px 45px; 
+    border: 1px solid var(--border);
+    border-radius: 8px; /* Слегка закругляем углы */
+    box-sizing: border-box;
+    /* Делаем фон чуть светлее, чтобы создать контраст с tools-section */
+    background-color: var(--bg-main); 
+    color: var(--text-main);
+    font-size: 1em;
+    
+    /* Эффект "утопленности" */
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.5); 
+    
+    transition: all 0.3s ease;
+}
+
